--- a/mobile/app/src/main/res/values/strings.xml
+++ b/mobile/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Memories</string>
+    <string name="title_activity_main_menu">MainMenuActivity</string>
 </resources>
